# UCAS-Classer

./: .gitignore  README.md  RELEASE_NOTE_1.0.2.md  backend-runtime.md  develop计划.md  package.json  tsconfig.scripts.json  使用说明.md  改进计划.md
automation/: README.md
automation/auth/: README.md  browser.ts  check-api.ts  check-auth.ts  config.ts  login-and-save-sep.ts  login-and-save.ts  open-authenticated-url.ts  paths.ts  reset.ts  utils.ts  webcheck.ts
automation/collectors/: README.md  assignment-list.ts  course-list.ts  full-collect.ts  material-list.ts  module-urls.ts  notice-list.ts  paths.ts  run-course-list.ts  run-full-collect.ts  session.ts  types.ts  utils.ts
automation/downloads/: common.ts  download-batch.ts  download-file.ts
automation/request-collectors/: README.md  common.ts  full-collect.ts  module-urls.ts  run-full-collect.ts
automation/request-course-list/: README.md  course-list.ts  run-course-list.ts
automation/shared/: README.md  cache-paths.ts  cache-utils.ts  collector-types.ts
automation/storage/: README.md
data/: app-settings.json
db/: README.md
docs/: development-handoff.md  frontend-state-audit.md  package-runtime-sync.md  program-map.md  v1.0.1-v1.1.0progress.md
docs/archive-plans/: PACKAGE-LAB.md  打包准备.md
scripts/: sync-package-runtime.mjs
shared/: runtime-paths.ts
src/: README.md  app.js  index.html  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: app_data.rs  app_settings.rs  auth_runtime.rs  db_import.rs  downloads.rs  lib.rs  main.rs  paths.rs  script_runner.rs
tests/: README.md
(+17 files in other folders)
